Added footer markup

--- a/index.html
+++ b/index.html
@@ -11,36 +11,43 @@
 </head>
 <body>
 <div class="hero-wrapper">
-<header class="header">
-    <div class="container-xl">
-        <nav class="header__nav">
-            <ul class="header__nav-ul">
-                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">About Us</a></li>
-                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Portfolio</a></li>
-                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#"><img class="header__nav-ul-li-a-img" src="src/image/header__icon.png" alt="A tattoo machine icon">Ink house</a></li>
-                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Masters</a></li>
-                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Price</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+    <header class="header">
+        <div class="container-xl">
+            <nav class="header__nav">
+                <ul class="header__nav-ul">
+                    <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">About Us</a></li>
+                    <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Portfolio</a></li>
+                    <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#"><img
+                            class="header__nav-ul-li-a-img" src="src/image/header__icon.png"
+                            alt="A tattoo machine icon">Ink house</a></li>
+                    <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Masters</a></li>
+                    <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Price</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     <div class="hero__text-wrapper">
-<div class="container-xl">
-    <h1 class="hero__text-wrapper-h1">Tattoo Studio "Ink House"</h1>
-    <p class="hero__text-wrapper-p">A team of professionals who make tattoos of any complexity, piercing and tattoo removal.</p>
-    <button class="hero__text-wrapper-button">I want tattoo</button>
-</div>
+        <div class="container-xl">
+            <h1 class="hero__text-wrapper-h1">Tattoo Studio "Ink House"</h1>
+            <p class="hero__text-wrapper-p">A team of professionals who make tattoos of any complexity, piercing and
+                tattoo removal.</p>
+            <button class="hero__text-wrapper-button button__style">I want tattoo</button>
+        </div>
     </div>
 </div>
 <section class="about">
-<div class="container-xl">
-    <img class="about__img" src="src/image/about__us.png" alt="A master makes a tattoo on an arm">
-    <div class="about__text-block">
-        <h2 class="about__text-block-h2">About us</h2>
-        <p class="about__text-block-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="container-xl">
+        <img class="about__img" src="src/image/about__us.png" alt="A master makes a tattoo on an arm">
+        <div class="about__text-block">
+            <h2 class="about__text-block-h2">About us</h2>
+            <p class="about__text-block-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.</p>
+        </div>
     </div>
-</div>
 </section>
 <section class="choose-us">
     <div class="container-xl">
@@ -50,59 +57,147 @@
         <ul class="choose-us__ul">
             <li class="choose-us__ul__li">
                 <h3 class="choose-us__ul__li__h3">Professional tattoo artists</h3>
-                <p class="choose-us__ul__li__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="choose-us__ul__li__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
             </li>
             <li class="choose-us__ul__li">
                 <h3 class="choose-us__ul__li__h3">Quality and sterility</h3>
-                <p class="choose-us__ul__li__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p class="choose-us__ul__li__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
             </li>
-          <li class="choose-us__ul__li">
-              <h3 class="choose-us__ul__li__h3">Cozy atmosphere</h3>
-              <p class="choose-us__ul__li__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </li>
+            <li class="choose-us__ul__li">
+                <h3 class="choose-us__ul__li__h3">Cozy atmosphere</h3>
+                <p class="choose-us__ul__li__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua.</p>
+            </li>
         </ul>
     </div>
 </section>
 <section class="services">
     <div class="container">
-       <h2 class="services__h2">Our services</h2>
+        <h2 class="services__h2">Our services</h2>
         <ul class="our-services__ul">
             <li class="our-services__li">
-                <img class="our-services__li__img" src="src/image/our-services__tattoo.jpg" alt="A girl with a tattoo on her arms">
+                <img class="our-services__li__img" src="src/image/our-services__tattoo.jpg"
+                     alt="A girl with a tattoo on her arms">
                 <h3 class="our-services__li__h3">Tattoo</h3>
-                <button class="our-services__li__button">View more</button>
+                <button class="our-services__li__button button__style">View more</button>
             </li>
             <li class="our-services__ul__li">
                 <img src="src/image/piercing.jpg" alt="A man with a left ear pierced" class="our-services__li__img">
                 <h3 class="our-services__li__h3">Piercing</h3>
             </li>
             <li class="our-services__ul__li">
-                <img src="src/image/tattoo_removal.jpg" alt="A woman with a tattoo on her left arm" class="our-services__li__img">
+                <img src="src/image/tattoo_removal.jpg" alt="A woman with a tattoo on her left arm"
+                     class="our-services__li__img">
                 <h3 class="our-services__li__h3">Tattoo removal</h3>
             </li>
         </ul>
     </div>
 </section>
-<section class="free-consultation">
-    <div class="contaner-xl">
-        <h2 class="free-consultation__h2">Sign up for a free consultation</h2>
-        <p class="free-consultation__p">Sign up for a free consultation in order to discuss all the details with the tattoo artist</p>
-        <div class="free-consultation__mobile_number_wrapper">
-            <input type="number" id="free-consultation__mobile_number_wrapper__number_field" placeholder="Your mobile number">
-            <label for="free-consultation__mobile_number_wrapper__number_field"></label>
-            <button class="free-consultation__mobile_number_wrapper__button">Send</button>
+<div class="bg-image-wrapper">
+    <section class="free-consultation">
+        <div class="contaner-xl">
+            <h2 class="free-consultation__h2">Sign up for a free consultation</h2>
+            <p class="free-consultation__p">Sign up for a free consultation in order to discuss all the details with the
+                tattoo artist</p>
+            <div class="free-consultation__mobile_number_wrapper">
+                <input type="number" id="free-consultation__mobile_number_wrapper__number_field"
+                       placeholder="Your mobile number">
+                <label for="free-consultation__mobile_number_wrapper__number_field"></label>
+                <button class="free-consultation__mobile_number_wrapper__button">Send</button>
+            </div>
+            <p class="free-consultation__p__bottom">Our manager will contact you within an hour </p>
         </div>
-        <p class="free-consultation__p__bottom">Our manager will contact you within an hour </p>
-    </div>
-</section>
-<section class="our-instagram">
+    </section>
+    <section class="our-instagram">
+        <div class="container-xl">
+            <h2 class="our-instagram__h2">Our Instagram</h2>
+            <p class="our-instagram__p">All information about our tattoo studio, as well as information about the
+                promotions, you can find on our page on Instagram.</p>
+            <ul class="our-instagram__photo">
+                <li class="our-instagram__photo__li">
+                    <img class="our-instagram__photo__li-img" src="src/image/instagram-1.jpg"
+                         alt="A girl with a tattoo on a back">
+                </li>
+                <li class="our-instagram__photo__li">
+                    <img class="our-instagram__photo__li-img" src="src/image/instagram-2.jpg"
+                         alt="A boy with a tattoo on a forearm">
+                </li>
+                <li class="our-instagram__photo__li">
+                    <img class="our-instagram__photo__li-img" src="src/image/instagram-3.jpg"
+                         alt="A girl with a tattoo on a left arm">
+                </li>
+                <li class="our-instagram__photo__li">
+                    <img class="our-instagram__photo__li-img" src="src/image/instagram-4.jpg"
+                         alt="A girl with a tattoo on a back">
+                </li>
+            </ul>
+            <button class="our-instagram button__style">Follow us</button>
+        </div>
+    </section>
+</div>
+<section class="contact">
     <div class="container-xl">
-        <h2 class="our-instagram__h2">Our Instagram</h2>
-        <p class="our-instagram__p">All information about our tattoo studio, as well as information about the promotions, you can find on our page on Instagram.</p>
-        <ul class="our-instagram__photo">
-
-        </ul>
+        <div class="contact-text__wrapper">
+            <h2 class="contact-text__wrapper__h2">Contacts</h2>
+            <ul class="contact-text__wrapper__ul">
+                <li class="contact-text__wrapper__li">
+                    <h3 class="contact-text__wrapper__li__h3">Address</h3>
+                    <p class="contact-text__wrapper__li__p">Fredensgade, 3, 2200 København, Denmark</p>
+                </li>
+                <li class="contact-text__wrapper__li">
+                    <h3 class="contact-text__wrapper__li__h3">Telephone number</h3>
+                    <p class="contact-text__wrapper__li__p">+45 (000)000-00-00</p>
+                </li>
+                <li class="contact-text__wrapper__li">
+                    <h3 class="contact-text__wrapper__li__h3">Working hours</h3>
+                    <p class="contact-text__wrapper__li__p">Monday-Friday</p>
+                    <p class="contact-text__wrapper__li__p">9 a.m.-8 p.m.</p>
+                    <p class="contact-text__wrapper__li__p">Saturday</p>
+                    <p class="contact-text__wrapper__li__p">11 a.m. - 6 p.m.</p>
+                    <p class="contact-text__wrapper__li__p">Sunday - day off</p>
+                </li>
+                <li class="contact-text__wrapper__li">
+                    <h3 class="contact-text__wrapper__li__h3">Social networks</h3>
+                    <div class="contact-text__wrapper__li__img">
+                        <a class="contact-text__wrapper__li__img_link" href="#"><img
+                                class="contact-text__wrapper__li__img_link__image" src="src/image/instagram-icon.svg"
+                                alt="An Instagram icon"></a>
+                        <a class="contact-text__wrapper__li__img_link" href="#"><img
+                                class="contact-text__wrapper__li__img_link__image" src="src/image/fb-icon.png"
+                                alt="A Facebook icon"></a>
+                        <a class="contact-text__wrapper__li__img_link" href="#"><img
+                                class="contact-text__wrapper__li__img_link__image" src="src/image/reddit-icon.png"
+                                alt="A Reddit icon"></a>
+                        <a class="contact-text__wrapper__li__img_link" href="#"><img
+                                class="contact-text__wrapper__li__img_link__image" src="src/image/twitter-icon.png"
+                                alt="A Twitter icon"></a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="contact_map-wrap">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2248.817610688493!2d12.566360516287425!3d55.69215868053718!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253021ff84e6f%3A0xf17ab7c425391972!2zRnJlZGVuc2dhZGUgMywgMjIwMCBLw7hiZW5oYXZuLCDQlNCw0L3QuNGP!5e0!3m2!1sru!2sua!4v1657444294654!5m2!1sru!2sua"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
     </div>
 </section>
+<footer>
+    <div class="container-xl">
+        <nav class="header__nav">
+            <ul class="header__nav-ul">
+                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">About Us</a></li>
+                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Portfolio</a></li>
+                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#"><img
+                        class="header__nav-ul-li-a-img" src="src/image/header__icon.png"
+                        alt="A tattoo machine icon">Ink house</a></li>
+                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Masters</a></li>
+                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Price</a></li>
+            </ul>
+        </nav>
+    </div>
+</footer>
 </body>
 </html>
