Added header markup

--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 </head>
 <body>
 <div class="hero-wrapper">
+    <div class="container-xl">
     <header class="header">
-        <div class="container-xl">
             <nav class="header__nav">
                 <ul class="header__nav-ul">
                     <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">About Us</a></li>
                     <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Portfolio</a></li>
-                    <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#"><img
+                    <li class="header__nav-ul-li"><a class="header__nav-ul-li-a  header__nav-ul-li-a-ink-house" href="#"><img
                             class="header__nav-ul-li-a-img" src="src/image/header__icon.png"
                             alt="A tattoo machine icon">Ink house</a></li>
                     <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Masters</a></li>
                     <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Price</a></li>
                 </ul>
             </nav>
-        </div>
     </header>
+
     <div class="hero__text-wrapper">
-        <div class="container-xl">
-            <h1 class="hero__text-wrapper-h1">Tattoo Studio "Ink House"</h1>
+            <h1 class="hero__text-wrapper-h1">Tattoo Studio </h1>
+            <h2 class="hero__text-wrapper-h2">"Ink House"</h2>
             <p class="hero__text-wrapper-p">A team of professionals who make tattoos of any complexity, piercing and
                 tattoo removal.</p>
             <button class="hero__text-wrapper-button button__style">I want tattoo</button>
