--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
 </div>
 <section class="about">
     <div class="container-xl">
-        <img class="about__img" src="src/image/about__us.png" alt="A master makes a tattoo on an arm">
-        <div class="about__text-block">
-            <h2 class="about__text-block-h2">About us</h2>
-            <p class="about__text-block-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-                voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-                laborum.</p>
-        </div>
+<div class="about-main">
+    <img class="about__img" src="src/image/about__us.png" alt="A master makes a tattoo on an arm">
+    <div class="about__text-block">
+        <h2 class="about__text-block-h2">About us</h2>
+        <p class="about__text-block-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+            voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+            laborum.</p>
     </div>
-</section>
-<section class="choose-us">
-    <div class="container-xl">
+
+    </div>
+        <div class="choose-us">
         <h2 class="choose-us__h2">
             Why should you choose us?
         </h2>
@@ -71,6 +71,7 @@
                     tempor incididunt ut labore et dolore magna aliqua.</p>
             </li>
         </ul>
+        </div>
     </div>
 </section>
 <section class="services">
