Added classes for our services section

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
     <div class="container">
         <h2 class="services__h2">Our services</h2>
         <ul class="our-services__ul">
-            <li class="our-services__li">
-                <img class="our-services__li__img" src="src/image/our-services__tattoo.jpg"
+            <li class="our-services__li__first">
+                <img class="our-services__li__img our-services__li__img__girl" src="src/image/our-services__tattoo.jpg"
                      alt="A girl with a tattoo on her arms">
-                <h3 class="our-services__li__h3">Tattoo</h3>
+                <h3 class="our-services__li__h3__img__girl">Tattoo</h3>
                 <button class="our-services__li__button button__style">View more</button>
             </li>
             <li class="our-services__ul__li">
