Added consultation wrapper

--- a/index.html
+++ b/index.html
@@ -96,19 +96,20 @@
         </ul>
     </div>
 </section>
-<div class="bg-image-wrapper">
     <section class="free-consultation">
         <div class="contaner-xl">
+            <div class="container">
             <h2 class="free-consultation__h2">Sign up for a free consultation</h2>
             <p class="free-consultation__p">Sign up for a free consultation in order to discuss all the details with the
                 tattoo artist</p>
             <div class="free-consultation__mobile_number_wrapper">
-                <input type="number" id="free-consultation__mobile_number_wrapper__number_field"
+                <input type="tel" id="free-consultation__mobile_number_wrapper__number_field"
                        placeholder="Your mobile number">
                 <label for="free-consultation__mobile_number_wrapper__number_field"></label>
-                <button class="free-consultation__mobile_number_wrapper__button">Send</button>
+                <button class="free-consultation__mobile_number_wrapper__button button__style">Send</button>
             </div>
             <p class="free-consultation__p__bottom">Our manager will contact you within an hour </p>
+            </div>
         </div>
     </section>
     <section class="our-instagram">
@@ -137,7 +138,6 @@
             <button class="our-instagram button__style">Follow us</button>
         </div>
     </section>
-</div>
 <section class="contact">
     <div class="container-xl">
         <div class="contact-text__wrapper">
