Added contact wrapper

--- a/index.html
+++ b/index.html
@@ -135,10 +135,13 @@
                          alt="A girl with a tattoo on a back">
                 </li>
             </ul>
-            <button class="our-instagram button__style">Follow us</button>
+            <div class="our-instagram__button">
+            <button class="button__style">Follow us</button>
+            </div>
         </div>
     </section>
 <section class="contact">
+
     <div class="container-xl">
         <div class="contact-text__wrapper">
             <h2 class="contact-text__wrapper__h2">Contacts</h2>
@@ -151,6 +154,8 @@
                     <h3 class="contact-text__wrapper__li__h3">Telephone number</h3>
                     <p class="contact-text__wrapper__li__p">+45 (000)000-00-00</p>
                 </li>
+            </ul>
+                <ul class="contact-text__wrapper__ul">
                 <li class="contact-text__wrapper__li">
                     <h3 class="contact-text__wrapper__li__h3">Working hours</h3>
                     <p class="contact-text__wrapper__li__p">Monday-Friday</p>
