correcteed the footer container

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="hero-wrapper">
-    <div class="container-xl">
+    <div class="container">
     <header class="header">
             <nav class="header__nav">
                 <ul class="header__nav-ul">
@@ -191,7 +191,7 @@
     </div>
 </section>
 <footer>
-    <div class="container-xl">
+    <div class="container">
         <nav class="header__nav">
             <ul class="header__nav-ul">
                 <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">About Us</a></li>
