--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
             </nav>
     </header>
     <div class="hero__text-wrapper">
-            <h1 class="hero__text-wrapper-h1">Tattoo Studio </h1>
-            <h2 class="hero__text-wrapper-h2">"Ink House"</h2>
+            <h1 class="hero__text-wrapper-h1">Tattoo Studio "Ink House"</h1>
             <p class="hero__text-wrapper-p">A team of professionals who make tattoos of any complexity, piercing and
                 tattoo removal.</p>
             <button class="hero__text-wrapper-button button__style">I want tattoo</button>
