--- a/index.html
+++ b/index.html
@@ -12,176 +12,181 @@
 <body>
 <div class="hero-wrapper">
     <div class="container">
-    <header class="header">
-            <nav class="header__nav">
-                <ul class="header__nav-ul">
-                    <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">About Us</a></li>
-                    <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Portfolio</a></li>
-                    <li class="header__nav-ul-li"><a class="header__nav-ul-li-a  header__nav-ul-li-a-ink-house" href="#"><img
-                            class="header__nav-ul-li-a-img" src="src/image/header__icon.png"
+        <header class="header">
+            <nav class="header--nav">
+                <ul class="nav--ul">
+                    <li class="nav--li"><a class="nav--link" href="#">About Us</a></li>
+                    <li class="nav--li"><a class="nav--link" href="#">Portfolio</a></li>
+                    <li class="nav--li"><a class="nav--link  header--link-icon" href="#"><img
+                            class="nav--li" src="src/image/header__icon.png"
                             alt="A tattoo machine icon">Ink house</a></li>
-                    <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Masters</a></li>
-                    <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Price</a></li>
+                    <li class="nav--li"><a class="nav--link" href="#">Masters</a></li>
+                    <li class="nav--li"><a class="nav--link" href="#">Price</a></li>
                 </ul>
             </nav>
-    </header>
-    <div class="hero__text-wrapper">
-            <h1 class="hero__text-wrapper-h1">Tattoo Studio "Ink House"</h1>
-            <p class="hero__text-wrapper-p">A team of professionals who make tattoos of any complexity, piercing and
+        </header>
+        <div class="hero__text-wrapper">
+            <h1 class="hero--primary-title">Tattoo Studio </h1>
+            <h2 class="hero--second-title">"Ink House"</h2>
+            <p class="hero--paragraph">A team of professionals who make tattoos of any complexity, piercing and
                 tattoo removal.</p>
-            <button class="hero__text-wrapper-button button__style">I want tattoo</button>
+            <button class="hero--button button__style">I want tattoo</button>
         </div>
     </div>
 </div>
 <section class="about">
     <div class="container-xl">
-<div class="about-main">
-    <img class="about__img" src="src/image/about__us.png" alt="A master makes a tattoo on an arm">
-    <div class="about__text-block">
-        <h2 class="about__text-block-h2">About us</h2>
-        <p class="about__text-block-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-            voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
-            laborum.</p>
-    </div>
-
-    </div>
+        <div class="about-main">
+            <img class="about--img" src="src/image/about__us.png" alt="A master makes a tattoo on an arm">
+            <div class="about__text-block">
+                <h2 class="about--header">About us</h2>
+                <p class="about--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+                    exercitation
+                    ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                    voluptate velit esse cillum dolore eu fugiat nulla pariatur.<br>
+                    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+                    est
+                    laborum.</p>
+            </div>
+        </div>
         <div class="choose-us">
-        <h2 class="choose-us__h2">
-            Why should you choose us?
-        </h2>
-        <ul class="choose-us__ul">
-            <li class="choose-us__ul__li">
-                <h3 class="choose-us__ul__li__h3">Professional tattoo artists</h3>
-                <p class="choose-us__ul__li__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.</p>
-            </li>
-            <li class="choose-us__ul__li">
-                <h3 class="choose-us__ul__li__h3">Quality and sterility</h3>
-                <p class="choose-us__ul__li__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.</p>
-            </li>
-            <li class="choose-us__ul__li">
-                <h3 class="choose-us__ul__li__h3">Cozy atmosphere</h3>
-                <p class="choose-us__ul__li__p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.</p>
-            </li>
-        </ul>
+            <h2 class="choose-us--header">
+                Why should you choose us?
+            </h2>
+            <ul class="choose-us__ul">
+                <li class="choose-us--li">
+                    <h3 class="choose-us--li--heading">Professional tattoo artists</h3>
+                    <p class="choose-us--li--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.</p>
+                </li>
+                <li class="choose-us__ul__li">
+                    <h3 class="choose-us--li--heading">Quality and sterility</h3>
+                    <p class="choose-us--li--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.</p>
+                </li>
+                <li class="choose-us__ul__li">
+                    <h3 class="choose-us--li--heading">Cozy atmosphere</h3>
+                    <p class="choose-us--li--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.</p>
+                </li>
+            </ul>
         </div>
     </div>
 </section>
 <section class="services">
     <div class="container">
-        <h2 class="services__h2">Our services</h2>
-        <ul class="our-services__ul">
-            <li class="our-services__li__first">
-                <img class="our-services__li__img our-services__li__img__girl" src="src/image/our-services__tattoo.jpg"
+        <h2 class="services--heading">Our services</h2>
+        <ul class="services--ul">
+            <li class="services--li">
+                <img class="services--img" src="src/image/our-services__tattoo.jpg"
                      alt="A girl with a tattoo on her arms">
-                <h3 class="our-services__li__h3__img__girl">Tattoo</h3>
-                <button class="our-services__li__button button__style">View more</button>
+                <h3 class="services--li--heading">Tattoo</h3>
+                <button class="services--button button__style">View more</button>
             </li>
-            <li class="our-services__ul__li">
-                <img src="src/image/piercing.jpg" alt="A man with a left ear pierced" class="our-services__li__img">
-                <h3 class="our-services__li__h3">Piercing</h3>
+            <li class="services--li">
+                <img src="src/image/piercing.jpg" alt="A man with a left ear pierced" class="services--img">
+                <h3 class="services--li--heading">Piercing</h3>
             </li>
             <li class="our-services__ul__li">
                 <img src="src/image/tattoo_removal.jpg" alt="A woman with a tattoo on her left arm"
-                     class="our-services__li__img">
-                <h3 class="our-services__li__h3">Tattoo removal</h3>
+                     class="services--img">
+                <h3 class="services--li--heading">Tattoo removal</h3>
             </li>
         </ul>
     </div>
 </section>
-    <section class="free-consultation">
-        <div class="contaner-xl">
-            <div class="container">
-            <h2 class="free-consultation__h2">Sign up for a free consultation</h2>
-            <p class="free-consultation__p">Sign up for a free consultation in order to discuss all the details with the
+<section class="free-consultation">
+    <div class="contaner-xl">
+        <div class="container">
+            <h2 class="free-consultation--heading">Sign up for a free consultation</h2>
+            <p class="free-consultation--paragraph">Sign up for a free consultation in order to discuss all the details
+                with the
                 tattoo artist</p>
-            <div class="free-consultation__mobile_number_wrapper">
-                <input type="tel" id="free-consultation__mobile_number_wrapper__number_field"
+            <div class="free-consultation--wrapper">
+                <input type="tel" id="free-consultation--number_field"
                        placeholder="Your mobile number">
-                <label for="free-consultation__mobile_number_wrapper__number_field"></label>
-                <button class="free-consultation__mobile_number_wrapper__button button__style">Send</button>
+                <label for="free-consultation--number_field"></label>
+                <button class="free-consultation--button button__style">Send</button>
             </div>
-            <p class="free-consultation__p__bottom">Our manager will contact you within an hour </p>
-            </div>
+            <p class="free-consultation--paragraph--bottom">Our manager will contact you within an hour </p>
         </div>
-    </section>
-    <section class="our-instagram">
-        <div class="container-xl">
-            <h2 class="our-instagram__h2">Our Instagram</h2>
-            <p class="our-instagram__p">All information about our tattoo studio, as well as information about the
-                promotions, you can find on our page on Instagram.</p>
-            <ul class="our-instagram__photo">
-                <li class="our-instagram__photo__li">
-                    <img class="our-instagram__photo__li-img" src="src/image/instagram-1.jpg"
-                         alt="A girl with a tattoo on a back">
-                </li>
-                <li class="our-instagram__photo__li">
-                    <img class="our-instagram__photo__li-img" src="src/image/instagram-2.jpg"
-                         alt="A boy with a tattoo on a forearm">
-                </li>
-                <li class="our-instagram__photo__li">
-                    <img class="our-instagram__photo__li-img" src="src/image/instagram-3.jpg"
-                         alt="A girl with a tattoo on a left arm">
-                </li>
-                <li class="our-instagram__photo__li">
-                    <img class="our-instagram__photo__li-img" src="src/image/instagram-4.jpg"
-                         alt="A girl with a tattoo on a back">
-                </li>
-            </ul>
-            <div class="our-instagram__button">
-            <button class="button__style">Follow us</button>
-            </div>
-        </div>
-    </section>
-<section class="contact">
-
+    </div>
+</section>
+<section class="our-instagram">
     <div class="container-xl">
-        <div class="contact-text__wrapper">
-            <h2 class="contact-text__wrapper__h2">Contacts</h2>
-            <ul class="contact-text__wrapper__ul">
-                <li class="contact-text__wrapper__li">
-                    <h3 class="contact-text__wrapper__li__h3">Address</h3>
-                    <p class="contact-text__wrapper__li__p">Fredensgade, 3, 2200 København, Denmark</p>
+        <h2 class="our-instagram--heading">Our Instagram</h2>
+        <p class="our-instagram--paragraph">All information about our tattoo studio, as well as information about the
+            promotions, you can find on our page on Instagram.</p>
+        <ul class="our-instagram--photo">
+            <li class="our-instagram--li">
+                <img class="our-instagram--img" src="src/image/instagram-1.jpg"
+                     alt="A girl with a tattoo on a back">
+            </li>
+            <li class="our-instagram--li">
+                <img class="our-instagram--img" src="src/image/instagram-2.jpg"
+                     alt="A boy with a tattoo on a forearm">
+            </li>
+            <li class="our-instagram--li">
+                <img class="our-instagram--img" src="src/image/instagram-3.jpg"
+                     alt="A girl with a tattoo on a left arm">
+            </li>
+            <li class="our-instagram--li">
+                <img class="our-instagram--img" src="src/image/instagram-4.jpg"
+                     alt="A girl with a tattoo on a back">
+            </li>
+        </ul>
+        <div class="our-instagram__button">
+            <button class="button__style">Follow us</button>
+        </div>
+    </div>
+</section>
+<section class="contact">
+    <div class="container-xl">
+        <div class="contact--text-wrapper">
+            <h2 class="contact--heading">Contacts</h2>
+            <ul class="contact--ul">
+                <li class="contact--li">
+                    <h3 class="contact--li--heading">Address</h3>
+                    <p class="contact--li--paragraph">Fredensgade, 3, 2200 København, Denmark</p>
                 </li>
-                <li class="contact-text__wrapper__li">
-                    <h3 class="contact-text__wrapper__li__h3">Telephone number</h3>
-                    <p class="contact-text__wrapper__li__p">+45 (000)000-00-00</p>
+                <li class="contact--li">
+                    <h3 class="contact--li--heading">Telephone number</h3>
+                    <p class="contact--li--paragraph">+45 (000)000-00-00</p>
                 </li>
             </ul>
-                <ul class="contact-text__wrapper__ul">
-                <li class="contact-text__wrapper__li">
-                    <h3 class="contact-text__wrapper__li__h3">Working hours</h3>
-                    <p class="contact-text__wrapper__li__p">Monday-Friday</p>
-                    <p class="contact-text__wrapper__li__p">9 a.m.-8 p.m.</p>
-                    <p class="contact-text__wrapper__li__p">Saturday</p>
-                    <p class="contact-text__wrapper__li__p">11 a.m. - 6 p.m.</p>
-                    <p class="contact-text__wrapper__li__p">Sunday - day off</p>
+            <ul class="contact-text-wrapper--ul">
+                <li class="contact-text-wrapper--li">
+                    <h3 class="contact--li--heading">Working hours</h3>
+                    <p class="contact--li--paragraph">Monday-Friday</p>
+                    <p class="contact--li--paragraph">9 a.m.-8 p.m.</p>
+                    <p class="contact--li--paragraph">Saturday</p>
+                    <p class="contact--li--paragraph">11 a.m. - 6 p.m.</p>
+                    <p class="contact--li--paragraph">Sunday - day off</p>
                 </li>
-                <li class="contact-text__wrapper__li">
-                    <h3 class="contact-text__wrapper__li__h3">Social networks</h3>
-                    <div class="contact-text__wrapper__li__img">
-                        <a class="contact-text__wrapper__li__img_link" href="#"><img
-                                class="contact-text__wrapper__li__img_link__image" src="src/image/instagram-icon.svg"
+                <li class="contact-text-wrapper--li">
+                    <h3 class="contact--li--heading">Social networks</h3>
+                    <div class="contact--social-media-icons">
+                        <a class="contact--link" href="#"><img
+                                class="social-media-icons--icon" src="src/image/instagram-icon.svg"
                                 alt="An Instagram icon"></a>
-                        <a class="contact-text__wrapper__li__img_link" href="#"><img
-                                class="contact-text__wrapper__li__img_link__image" src="src/image/fb-icon.png"
+                        <a class="contact--link" href="#"><img
+                                class="social-media-icons--icon" src="src/image/fb-icon.png"
                                 alt="A Facebook icon"></a>
-                        <a class="contact-text__wrapper__li__img_link" href="#"><img
-                                class="contact-text__wrapper__li__img_link__image" src="src/image/reddit-icon.png"
+                        <a class="contact--link" href="#"><img
+                                class="social-media-icons--icon" src="src/image/reddit-icon.png"
                                 alt="A Reddit icon"></a>
-                        <a class="contact-text__wrapper__li__img_link" href="#"><img
-                                class="contact-text__wrapper__li__img_link__image" src="src/image/twitter-icon.png"
+                        <a class="contact--link" href="#"><img
+                                class="social-media-icons--icon" src="src/image/twitter-icon.png"
                                 alt="A Twitter icon"></a>
                     </div>
                 </li>
             </ul>
         </div>
-        <div class="contact_map-wrap">
+        <div class="contact--map-wrap">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2248.817610688493!2d12.566360516287425!3d55.69215868053718!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465253021ff84e6f%3A0xf17ab7c425391972!2zRnJlZGVuc2dhZGUgMywgMjIwMCBLw7hiZW5oYXZuLCDQlNCw0L3QuNGP!5e0!3m2!1sru!2sua!4v1657444294654!5m2!1sru!2sua"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -190,15 +195,15 @@
 </section>
 <footer>
     <div class="container">
-        <nav class="header__nav">
-            <ul class="header__nav-ul">
-                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">About Us</a></li>
-                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Portfolio</a></li>
-                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#"><img
-                        class="header__nav-ul-li-a-img" src="src/image/header__icon.png"
+        <nav class="footer--nav">
+            <ul class="footer--ul">
+                <li class="footer--li"><a class="footer--link" href="#">About Us</a></li>
+                <li class="footer--li"><a class="footer--link" href="#">Portfolio</a></li>
+                <li class="footer--li"><a class="footer--link" href="#"><img
+                        class="footer--img" src="src/image/header__icon.png"
                         alt="A tattoo machine icon">Ink house</a></li>
-                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Masters</a></li>
-                <li class="header__nav-ul-li"><a class="header__nav-ul-li-a" href="#">Price</a></li>
+                <li class="footer--li"><a class="footer--link" href="#">Masters</a></li>
+                <li class="footer--li"><a class="footer--link" href="#">Price</a></li>
             </ul>
         </nav>
     </div>
