Changed tags classes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="container-xl">
         <div class="about-main">
             <img class="about--img" src="src/image/about__us.png" alt="A master makes a tattoo on an arm">
-            <div class="about__text-block">
+            <div class="about--text-block">
                 <h2 class="about--header">About us</h2>
                 <p class="about--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
@@ -54,20 +54,20 @@
             <h2 class="choose-us--header">
                 Why should you choose us?
             </h2>
-            <ul class="choose-us__ul">
+            <ul class="choose-us--ul">
                 <li class="choose-us--li">
                     <h3 class="choose-us--li--heading">Professional tattoo artists</h3>
                     <p class="choose-us--li--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod
                         tempor incididunt ut labore et dolore magna aliqua.</p>
                 </li>
-                <li class="choose-us__ul__li">
+                <li class="choose-us--li">
                     <h3 class="choose-us--li--heading">Quality and sterility</h3>
                     <p class="choose-us--li--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod
                         tempor incididunt ut labore et dolore magna aliqua.</p>
                 </li>
-                <li class="choose-us__ul__li">
+                <li class="choose-us--li">
                     <h3 class="choose-us--li--heading">Cozy atmosphere</h3>
                     <p class="choose-us--li--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod
