Changed tags classes

--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
     <div class="container">
         <header class="header">
             <nav class="header--nav">
-                <ul class="nav--ul">
-                    <li class="nav--li"><a class="nav--link" href="#">About Us</a></li>
-                    <li class="nav--li"><a class="nav--link" href="#">Portfolio</a></li>
-                    <li class="nav--li"><a class="nav--link  header--link-icon" href="#"><img
-                            class="nav--li" src="src/image/header__icon.png"
+                <ul class="header--ul">
+                    <li class="header--li"><a class="header--link" href="#">About Us</a></li>
+                    <li class="header--li"><a class="header--link" href="#">Portfolio</a></li>
+                    <li class="header--li"><a class="header--link  header--link-icon" href="#"><img
+                            class="header--li" src="src/image/header__icon.png"
                             alt="A tattoo machine icon">Ink house</a></li>
-                    <li class="nav--li"><a class="nav--link" href="#">Masters</a></li>
-                    <li class="nav--li"><a class="nav--link" href="#">Price</a></li>
+                    <li class="header--li"><a class="header--link" href="#">Masters</a></li>
+                    <li class="header--li"><a class="header--link" href="#">Price</a></li>
                 </ul>
             </nav>
         </header>
-        <div class="hero__text-wrapper">
+        <div class="hero--text-wrapper">
             <h1 class="hero--primary-title">Tattoo Studio </h1>
             <h2 class="hero--second-title">"Ink House"</h2>
             <p class="hero--paragraph">A team of professionals who make tattoos of any complexity, piercing and
                 tattoo removal.</p>
-            <button class="hero--button button__style">I want tattoo</button>
+            <button class="hero--button button--style">I want tattoo</button>
         </div>
     </div>
 </div>
@@ -107,10 +107,10 @@
                 with the
                 tattoo artist</p>
             <div class="free-consultation--wrapper">
-                <input type="tel" id="free-consultation--number_field"
+                <input type="tel" id="free-consultation--number-field"
                        placeholder="Your mobile number">
-                <label for="free-consultation--number_field"></label>
-                <button class="free-consultation--button button__style">Send</button>
+                <label for="free-consultation--number-field"></label>
+                <button class="free-consultation--button button--style">Send</button>
             </div>
             <p class="free-consultation--paragraph--bottom">Our manager will contact you within an hour </p>
         </div>
@@ -139,8 +139,8 @@
                      alt="A girl with a tattoo on a back">
             </li>
         </ul>
-        <div class="our-instagram__button">
-            <button class="button__style">Follow us</button>
+        <div class="our-instagram--button">
+            <button class="button--style">Follow us</button>
         </div>
     </div>
 </section>
@@ -171,16 +171,16 @@
                     <h3 class="contact--li--heading">Social networks</h3>
                     <div class="contact--social-media-icons">
                         <a class="contact--link" href="#"><img
-                                class="social-media-icons--icon" src="src/image/instagram-icon.svg"
+                                class="contact--icon" src="src/image/instagram-icon.svg"
                                 alt="An Instagram icon"></a>
                         <a class="contact--link" href="#"><img
-                                class="social-media-icons--icon" src="src/image/fb-icon.png"
+                                class="contact--icon" src="src/image/fb-icon.png"
                                 alt="A Facebook icon"></a>
                         <a class="contact--link" href="#"><img
-                                class="social-media-icons--icon" src="src/image/reddit-icon.png"
+                                class="contact--icon" src="src/image/reddit-icon.png"
                                 alt="A Reddit icon"></a>
                         <a class="contact--link" href="#"><img
-                                class="social-media-icons--icon" src="src/image/twitter-icon.png"
+                                class="contact--icon" src="src/image/twitter-icon.png"
                                 alt="A Twitter icon"></a>
                     </div>
                 </li>
@@ -193,7 +193,7 @@
         </div>
     </div>
 </section>
-<footer>
+<footer class="footer">
     <div class="container">
         <nav class="footer--nav">
             <ul class="footer--ul">
