--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <div class="hero-wrapper">
     <div class="container">
         <header class="header">
-            <nav class="header--nav">
-                <ul class="header--ul">
-                    <li class="header--li"><a class="header--link" href="#">About Us</a></li>
-                    <li class="header--li"><a class="header--link" href="#">Portfolio</a></li>
-                    <li class="header--li"><a class="header--link  header--link-icon" href="#"><img
-                            class="header--li" src="src/image/header__icon.png"
+            <nav class="header--nav nav">
+                <ul class="nav--list">
+                    <li class="nav--item"><a class="nav--link" href="#">About Us</a></li>
+                    <li class="nav--item"><a class="nav--link" href="#">Portfolio</a></li>
+                    <li class="nav--item"><a class="nav--link  nav--link icon" href="#"><img
+                            class="nav--item" src="src/image/header__icon.png"
                             alt="A tattoo machine icon">Ink house</a></li>
-                    <li class="header--li"><a class="header--link" href="#">Masters</a></li>
-                    <li class="header--li"><a class="header--link" href="#">Price</a></li>
+                    <li class="nav--item"><a class="nav--link" href="#">Masters</a></li>
+                    <li class="nav--item"><a class="nav--link" href="#">Price</a></li>
                 </ul>
             </nav>
         </header>
