Corrected the html markup

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         <header class="header">
             <nav class="header--nav nav">
                 <ul class="nav--list">
-                    <li class="nav--item"><a class="nav--link" href="#">About Us</a></li>
-                    <li class="nav--item"><a class="nav--link" href="#">Portfolio</a></li>
-                    <li class="nav--item"><a class="nav--link  nav--link icon" href="#"><img
-                            class="nav--item" src="src/image/header__icon.png"
+                    <li class="nav-list__li"><a class="nav--list__link" href="#">About Us</a></li>
+                    <li class="nav-list__li"><a class="nav--list__link" href="#">Portfolio</a></li>
+                    <li class="nav-list__li"><a class="nav--list__link" href="#"><img
+                            class="nav--list__link icon" src="src/image/header__icon.png"
                             alt="A tattoo machine icon">Ink house</a></li>
-                    <li class="nav--item"><a class="nav--link" href="#">Masters</a></li>
-                    <li class="nav--item"><a class="nav--link" href="#">Price</a></li>
+                    <li class="nav-list__li"><a class="nav--link" href="#">Masters</a></li>
+                    <li class="nav-list__li"><a class="nav--link" href="#">Price</a></li>
                 </ul>
             </nav>
         </header>
-        <div class="hero--text-wrapper">
+        <div class="hero--text">
             <h1 class="hero--primary-title">Tattoo Studio </h1>
             <h2 class="hero--second-title">"Ink House"</h2>
             <p class="hero--paragraph">A team of professionals who make tattoos of any complexity, piercing and
@@ -55,21 +55,21 @@
                 Why should you choose us?
             </h2>
             <ul class="choose-us--ul">
-                <li class="choose-us--li">
-                    <h3 class="choose-us--li--heading">Professional tattoo artists</h3>
-                    <p class="choose-us--li--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                <li class="choose-us__li">
+                    <h3 class="choose-us__heading">Professional tattoo artists</h3>
+                    <p class="choose-us__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod
                         tempor incididunt ut labore et dolore magna aliqua.</p>
                 </li>
-                <li class="choose-us--li">
-                    <h3 class="choose-us--li--heading">Quality and sterility</h3>
-                    <p class="choose-us--li--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                <li class="choose-us__li">
+                    <h3 class="choose-us__heading">Quality and sterility</h3>
+                    <p class="choose-us__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod
                         tempor incididunt ut labore et dolore magna aliqua.</p>
                 </li>
-                <li class="choose-us--li">
-                    <h3 class="choose-us--li--heading">Cozy atmosphere</h3>
-                    <p class="choose-us--li--paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                <li class="choose-us__li">
+                    <h3 class="choose-us__heading">Cozy atmosphere</h3>
+                    <p class="choose-us__paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                         eiusmod
                         tempor incididunt ut labore et dolore magna aliqua.</p>
                 </li>
@@ -80,21 +80,21 @@
 <section class="services">
     <div class="container">
         <h2 class="services--heading">Our services</h2>
-        <ul class="services--ul">
-            <li class="services--li">
+        <ul class="services__ul">
+            <li class="services__li">
                 <img class="services--img" src="src/image/our-services__tattoo.jpg"
                      alt="A girl with a tattoo on her arms">
-                <h3 class="services--li--heading">Tattoo</h3>
+                <h3 class="services__li__heading">Tattoo</h3>
                 <button class="services--button button__style">View more</button>
             </li>
-            <li class="services--li">
+            <li class="services__li">
                 <img src="src/image/piercing.jpg" alt="A man with a left ear pierced" class="services--img">
-                <h3 class="services--li--heading">Piercing</h3>
+                <h3 class="services__li__heading">Piercing</h3>
             </li>
-            <li class="our-services__ul__li">
+            <li class="services__li">
                 <img src="src/image/tattoo_removal.jpg" alt="A woman with a tattoo on her left arm"
                      class="services--img">
-                <h3 class="services--li--heading">Tattoo removal</h3>
+                <h3 class="services__li__heading">Tattoo removal</h3>
             </li>
         </ul>
     </div>
@@ -150,22 +150,22 @@
             <h2 class="contact--heading">Contacts</h2>
             <ul class="contact--ul">
                 <li class="contact--li">
-                    <h3 class="contact--li--heading">Address</h3>
-                    <p class="contact--li--paragraph">Fredensgade, 3, 2200 København, Denmark</p>
+                    <h3 class="contact--li__heading">Address</h3>
+                    <p class="contact--li__paragraph">Fredensgade, 3, 2200 København, Denmark</p>
                 </li>
                 <li class="contact--li">
-                    <h3 class="contact--li--heading">Telephone number</h3>
-                    <p class="contact--li--paragraph">+45 (000)000-00-00</p>
+                    <h3 class="contact--li__heading">Telephone number</h3>
+                    <p class="contact--li__paragraph">+45 (000)000-00-00</p>
                 </li>
             </ul>
             <ul class="contact-text-wrapper--ul">
                 <li class="contact-text-wrapper--li">
-                    <h3 class="contact--li--heading">Working hours</h3>
-                    <p class="contact--li--paragraph">Monday-Friday</p>
-                    <p class="contact--li--paragraph">9 a.m.-8 p.m.</p>
-                    <p class="contact--li--paragraph">Saturday</p>
-                    <p class="contact--li--paragraph">11 a.m. - 6 p.m.</p>
-                    <p class="contact--li--paragraph">Sunday - day off</p>
+                    <h3 class="contact--li__heading">Working hours</h3>
+                    <p class="contact--li__paragraph">Monday-Friday</p>
+                    <p class="contact--li__paragraph">9 a.m.-8 p.m.</p>
+                    <p class="contact--li__paragraph">Saturday</p>
+                    <p class="contact--li__paragraph">11 a.m. - 6 p.m.</p>
+                    <p class="contact--li__paragraph">Sunday - day off</p>
                 </li>
                 <li class="contact-text-wrapper--li">
                     <h3 class="contact--li--heading">Social networks</h3>
@@ -197,13 +197,13 @@
     <div class="container">
         <nav class="footer--nav">
             <ul class="footer--ul">
-                <li class="footer--li"><a class="footer--link" href="#">About Us</a></li>
-                <li class="footer--li"><a class="footer--link" href="#">Portfolio</a></li>
-                <li class="footer--li"><a class="footer--link" href="#"><img
+                <li class="footer__li"><a class="footer--link" href="#">About Us</a></li>
+                <li class="footer__li"><a class="footer--link" href="#">Portfolio</a></li>
+                <li class="footer__li"><a class="footer--link" href="#"><img
                         class="footer--img" src="src/image/header__icon.png"
                         alt="A tattoo machine icon">Ink house</a></li>
-                <li class="footer--li"><a class="footer--link" href="#">Masters</a></li>
-                <li class="footer--li"><a class="footer--link" href="#">Price</a></li>
+                <li class="footer__li"><a class="footer--link" href="#">Masters</a></li>
+                <li class="footer__li"><a class="footer--link" href="#">Price</a></li>
             </ul>
         </nav>
     </div>
